Added support for Emit ePost timing system
Small tweaks

--- a/conf/rtl_433.example.conf
+++ b/conf/rtl_433.example.conf
@@ -472,6 +472,7 @@ stop_after_successful_events false
   protocol 243 # Celsia CZC1 Thermostat
   protocol 244 # Fine Offset Electronics WS90 weather station
 # protocol 245 # ThermoPro TX-2C Thermometer
+  protocol 246 # Emit ePost
 
 ## Flex devices (command line option "-X")
 
